# valuations-autonomous_coding

./: CLAUDE.md  pyproject.toml
autonomous-coding/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  autonomous_agent_demo.py  docker-compose.yml  main.py  progress.py  pyproject.toml  run.sh  security.py  test_security.py
autonomous-coding/docs/: BUGFIX_SUMMARY.md  CHANGELOG.md  CRITICAL_BUGS_FIX_PLAN.md  DATABASE_VALIDATION_FIX.md  FINAL_IMPLEMENTATION_REVIEW.md  FIX_SUMMARY.md  PHASE_2_IMPLEMENTATION_REVIEW.md  PROTOCOL_DI_ADDED.md  TEST_IMPLEMENTATION_SUMMARY.md  orchestration_layer_implementation_plan.md
autonomous-coding/prompts/: app_spec.txt  coding_prompt copy.md  coding_prompt.md  initializer_prompt copy.md  initializer_prompt.md  project_description.txt
